# rust-demo

./: .gitignore
demo/: main.rs
demo/src/: main.rs
demo/src/model/: deque.rs  linked_list.rs  mod.rs  queue.rs
hello-rocket/: Cargo.toml  Rocket.toml
hello-rocket/src/: main.rs
rocket2/: Cargo.toml  Rocket.toml
rocket2/src/: main.rs
rocket3/: .env  Cargo.toml  Rocket.toml
rocket3/migrations/2020-05-20-115400_users/: up.sql
rocket3/src/: db.rs  main.rs  models.rs  routes.rs
rocket4/: Cargo.toml
rocket4/src/: lib.rs  main.rs
rocket4/src/models/: mod.rs  order_model.rs  user_model.rs
rocket4/src/services/: mod.rs
rocket4/src/services/token/: jwt.rs  mod.rs
tf01/: Cargo.toml  build.rs
tf01/proto/: infer.proto
tf01/py/: gen_model.py  infer_local.py  request
tf01/src/: infer.rs
tidefram/: Cargo.toml
tidefram/src/: main.rs
web1/: Cargo.toml
web1/src/: main.rs  req.http
