[package]
name = "tf01"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = "0.17"

tokio = {version="1", features = ["full"]}
tonic = "0.6"
prost = "0.9"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.6"